# ai_apps_testing

./: .gitignore  App.tsx  DESKTOP_UI_DEEP_ANALYSIS.md  DESKTOP_UI_OPTIMIZATION.md  NATIVE_DESKTOP_UI_REDESIGN.md  README.md  UI_UX_IMPROVEMENTS.md  index.html  list_models.py  llm.py  metadata.json  test_endpoint.py  test_visibility.html  types.ts
apps/: DataProfiler.tsx  QualityChecker.tsx  UIAutomator.tsx
backend/: browsers_services.py  main.py  pyproject.toml
backend/advanced_browser_services/: __init__.py  base_service.py  data_extraction_agent.py  llm_factory.py  multi_tab_agent.py  parallel_agents.py  research_agent.py  service_runner.py  streaming.py  streaming_runner.py  test_agents.py
backend/ui_testing_agent/: __init__.py  a11y_service.py  example_usage.py  service.py
backend/ui_testing_agent/core/: __init__.py  a11y_agent.py  action_data_extractor.py  axe_injector.py  browser_factory.py  browser_use_replay.py  explorer_agent.py  selector_extractor.py  step_processor.py
backend/ui_testing_agent/docs/: PLAYWRIGHT_CODE_GENERATION_ARCHITECTURE.md
backend/ui_testing_agent/generators/: __init__.py  a11y_report_generator.py  playwright_generator.py  report_generator.py  test_case_generator.py  verified_playwright_generator.py
backend/ui_testing_agent/models/: __init__.py  a11y_models.py  output_config.py  processed_action.py  processed_step.py  selector_info.py  test_scenario.py  test_session.py
backend/ui_testing_agent/prompts/: __init__.py  a11y_auditor_prompt.py  qa_engineer_prompt.py
components/: ArtifactsViewer.tsx  LogViewer.tsx  SessionBrowser.tsx  SessionComparison.tsx  Sidebar.tsx  TestResultsPanel.tsx  Toast.tsx
docs/: ADVANCED_BROWSER_SERVICES.md  ARCHITECTURE.md  BROWSER_AND_LLM_CONNECTIONS.md  CDP_CLIENT_FIX_OPTIONS.md  CDP_GRACEFUL_FALLBACK_PLAN.md  UI_TESTING_AGENT_OUTPUTS.md
frontend/: App.tsx  index.html  package-lock.json  package.json  types.ts
frontend/apps/: UIAutomator.tsx
frontend/components/: ArtifactsViewer.tsx  BrowserPreviewPanel.tsx  LogViewer.tsx  SessionBrowser.tsx  SessionComparison.tsx  Sidebar.tsx  TestResultsPanel.tsx  Toast.tsx
frontend/services/: geminiService.ts
prompts/: ui_testing_agent_prompt.md
research/: 00_RESEARCH_INDEX.md  01_METICULOUS_AI_COMPETITIVE_ANALYSIS.md  02_LLM_NATIVE_BROWSER_TOOLS.md  03_BROWSER_AUTOMATION_FOUNDATIONS.md  04_AI_TESTING_TOOLS_ECOSYSTEM.md  05_TECHNOLOGY_RECOMMENDATIONS.md  06_LANGGRAPH_RALPH_ARCHITECTURE.md
research/anthropic/: README.md  admin-api.md  agent-sdk.md  anthropic-sdk.md  citations-files-api.md  claude-code.md  claude-models.md  extended-thinking.md  mcp.md  prompt-caching.md  tool-use.md  voice-realtime.md
research/gemini/: README.md  adk-agent-builder.md  function-calling.md  gemini-3-api-reference.md  gemini-3-overview.md  gemini-cli.md  image-generation.md  live-api.md  media-generation.md  sdk-advanced-features.md  sdk-quickstart.md
services/: geminiService.ts
