[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-ui-testing"
version = "1.0.0"
description = "AI-powered UI testing system using LangGraph and Playwright"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "AI UI Testing Team" }
]
keywords = ["testing", "ai", "ui", "automation", "playwright", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Layer 0 - Foundation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",

    # Layer 1 - Core Services
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "google-generativeai>=0.8.0",
    "langchain-google-genai>=2.0.0",
    "playwright>=1.40.0",
    "browser-use>=0.2.0",
    "aiofiles>=23.0.0",
    "Pillow>=10.0.0",

    # Layer 2 - Business Logic
    "numpy>=1.26.0",

    # Layer 3 - Orchestration
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",

    # Layer 4 - API
    "fastapi>=0.109.0",
    "uvicorn>=0.25.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",

    # Layer 5 - Integration
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "types-aiofiles>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/ai-ui-testing/ai-ui-testing"
Documentation = "https://github.com/ai-ui-testing/ai-ui-testing#readme"
Repository = "https://github.com/ai-ui-testing/ai-ui-testing"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "browser_use.*",
    "google.generativeai.*",
    "langchain_google_genai.*",
    "langgraph.*",
    "playwright.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["layer0_foundation", "layer1_core_services", "layer2_business_logic"]

[tool.black]
line-length = 100
target-version = ["py311"]
